--- a/carni.html
+++ b/carni.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
     <script src=""></script>
     <title>BYUNNNN</title>
     <!-- ADDING CUSTOM CSS STYLE -->
@@ -37,6 +37,7 @@
       .btn {font-weight: bold;}
       #more { text-decoration: none; font-style: italic;}
       #more:hover {text-decoration: none; border-bottom: 1px solid #000;}
+      #left-bar {text-align: center;}
     </style>
   </head>
   <body>
@@ -84,34 +85,28 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-4">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>ABOUT</h4>
+              <h4>CRITIQUE <a href="index.html"><</a> </h4>
               <hr>
               <h3></h3>
             </div>
             <!-- ONE -->
             <!-- project title -->
-            <h5><em><a class="link" href=""> KARAM BYUN</a></em></h5>
+
             <!-- project image -->
             <div class="image">
-              <a href=""><img src="image/typo_00.jpg" class="img-responsive img-circle"></a>
+              <a href=""><img src="image/carni_0A.jpg" class="img-responsive img-circle"></a>
             </div>
-            <!-- description -->
-            <p><em>
-              <a href="mailto:byunkaram@gmail.com">Email: byunkaram@gmail.com</a>
-              <a href="http://twitter.com/crzikrn"><br>Twitter: @crzikrn<a>
-              <a href="http://github.com/crzikrn"><br>Github: @crzikrn</a>
-              <a href="https://medium.com/@crzikrn"><br>Medium: @crzikrn</a>
-              <a href="http://vimeo.com/crzikrn"><br>Vimeo: @crzikrn</a>
-              <a href="http://www.linkedin.com/in/karambyun"><br>LinkedIn: @karambyun</a>
-            </em></p>
-            <!-- button -->
-            <div class="more button">
+            <!-- date description -->
+            <p id="left-bar" style="font-family: 'Open Sans';">
+            <b>Carnisseur™ Aftermath</b><br>
+            ITP, NYU<br>
+            New York, NY<br>
+            2014</p>
 
+            <div style="text-align: center;">
+              <a href="" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
-
-            <br>
-            <hr>
-
 
           </div>
 
@@ -119,28 +114,38 @@
           <div class="col-sm-9 col-md-9 col-lg-9 col-xs-8">
             <!-- category title -->
             <div class="category title">
-              <h4>KARAM BYUN</h4>
+              <h4>CARNISSEUR™ AFTERMATH</h4>
               <hr>
               <h3></h3>
             </div>
             <!-- ONE -->
-            <!-- project title -->
-            <h5><em><a class="link" href="">ABOUT</a></em></h5>
-            <!-- project image -->
-            <div class="image"></div>
             <!-- project description -->
-            <p>I recently graduated as a master's candidate at ITP, NYU. My passions are closely tied with computational media effects on society, education and religion.
-            <br><br>
-            I love programming languages and vector designs, and especially love to teach basic concepts of these fields to people. I have recently taught at Mongolia at Huree University in the Multimedia department. And am looking forward for more teaching opportunities.</p>
-            <div class="more button">
+            <p>This is a writing on the aftermath of Carnisseur™, a fictional food corporation placed not so far into the future, its emergence and its lessons. The whole collborative project is based on the premise that food future will be inevitably exploited by capitalistic tools. A criticism on corporations that commercializes basic rights to live as a human being.</p>
+
+            <p><span id="more"><a href="http://www.byunnnn.com/tte-000008-carnisseur-aftermath-its-emergence-its-lessons/"><b>Documentation: Carnisseur Aftermath Blog</b></a></span><p>
+
+            <hr>
+            <!-- project image -->
+            <div class="image">
+              <div class="col-md-6">
+                <img src="image/carni_00.jpg" class="img-responsive ">
+                <img src="image/carni_01.png" class="img-responsive ">
+                  <img src="image/carni_02.jpg" class="img-responsive ">
+                    <img src="image/carni_03.jpg" class="img-responsive ">
+
+              </div>
+              <div class="col-md-6">
+                  <img src="image/carni_04.png" class="img-responsive ">
+                <img src="image/carni_05.png" class="img-responsive">
+                <p><b>Abstract.</b> A method for ensuring the delivery of high quality cultured meat without worries of hazardous cell mutations from unlicensed third party in-vitro meat cultures by means of digital rights management for licensed in-vitro meat providers. In particular, described herein are methods to prevent the risk of third party cultures from contaminating or accessing the composition of the in-vitro meat culture; of exceeding safe growth limits; of accelerating the growth of cultures that have not been licensed and verified as safe. The invention restricts access to accelerated in-vitro meat growth by unlicensed/third-party cultures, and limits meat growth-per-culture to within acceptable amounts.</p>
+              </div>
+
 
             </div>
-            <!-- break -->
-            <br>
-            <hr>
+            <!-- project description -->
 
 
-
+            </div>
           </div>
 
         </div> <!--  END OF PORTFOLIO ROW-->
