--- a/digi.html
+++ b/digi.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
     <script src=""></script>
     <title>BYUNNNN</title>
     <!-- ADDING CUSTOM CSS STYLE -->
@@ -37,6 +37,7 @@
       .btn {font-weight: bold;}
       #more { text-decoration: none; font-style: italic;}
       #more:hover {text-decoration: none; border-bottom: 1px solid #000;}
+      #left-bar {text-align: center;}
     </style>
   </head>
   <body>
@@ -84,34 +85,28 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-4">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>ABOUT</h4>
+              <h4>CODING <a href="index.html"><</a> </h4>
               <hr>
               <h3></h3>
             </div>
             <!-- ONE -->
             <!-- project title -->
-            <h5><em><a class="link" href=""> KARAM BYUN</a></em></h5>
+
             <!-- project image -->
             <div class="image">
-              <a href=""><img src="image/typo_00.jpg" class="img-responsive img-circle"></a>
+              <a href=""><img src="image/dian_03.png" class="img-responsive img-circle"></a>
             </div>
-            <!-- description -->
-            <p><em>
-              <a href="mailto:byunkaram@gmail.com">Email: byunkaram@gmail.com</a>
-              <a href="http://twitter.com/crzikrn"><br>Twitter: @crzikrn<a>
-              <a href="http://github.com/crzikrn"><br>Github: @crzikrn</a>
-              <a href="https://medium.com/@crzikrn"><br>Medium: @crzikrn</a>
-              <a href="http://vimeo.com/crzikrn"><br>Vimeo: @crzikrn</a>
-              <a href="http://www.linkedin.com/in/karambyun"><br>LinkedIn: @karambyun</a>
-            </em></p>
-            <!-- button -->
-            <div class="more button">
+            <!-- date description -->
+            <p id="left-bar" style="font-family: 'Open Sans';">
+            <b>Digital Analog Representations of Us</b><br>
+            ITP, NYU<br>
+            New York, NY<br>
+            2013</p>
 
+            <div style="text-align: center;">
+              <a href="" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
-
-            <br>
-            <hr>
-
 
           </div>
 
@@ -119,28 +114,41 @@
           <div class="col-sm-9 col-md-9 col-lg-9 col-xs-8">
             <!-- category title -->
             <div class="category title">
-              <h4>KARAM BYUN</h4>
+              <h4>DIGITAL ANALOG REPRESENTATIONS OF US</h4>
               <hr>
               <h3></h3>
             </div>
             <!-- ONE -->
-            <!-- project title -->
-            <h5><em><a class="link" href="">ABOUT</a></em></h5>
-            <!-- project image -->
-            <div class="image"></div>
             <!-- project description -->
-            <p>I recently graduated as a master's candidate at ITP, NYU. My passions are closely tied with computational media effects on society, education and religion.
-            <br><br>
-            I love programming languages and vector designs, and especially love to teach basic concepts of these fields to people. I have recently taught at Mongolia at Huree University in the Multimedia department. And am looking forward for more teaching opportunities.</p>
-            <div class="more button">
+            <p>The juxtaposition of analog and digital expressions on a digital canvas. Usage of facedetection and pixel brightness to simulate paintings in the style of expressionism. A digital tool to bring people together and have fun in front of the screen creating new expressive digital paintings. The more the merrier; the more people we have, more complete the digital canvas. It's about bringing out the expressive needs of humans and taking a memorable painting</p>
+
+            <p><b>Tools used:</b> openCV, processing</p>
+            <span id="more"><p><a href="http://www.byunnnn.com/icm-000010-a-digital-analog-representation-of-us/"><b>Documenation: byunnnn blog</b></a><p></span>
+
+            <hr>
+            <!-- project image -->
+            <div class="image">
+              <div class="col-md-12">
+                <div style="margin-bottom: 10px" class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/80309154?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <img src="image/dian_01.png" class="img-responsive">
+                <img src="image/dian_00.png" class="img-responsive">
+              </div>
+              <div class="col-md-6">
+                <img src="image/dian_02.png" class="img-responsive">
+                <p><p>
+              </div>
+
 
             </div>
-            <!-- break -->
-            <br>
-            <hr>
+            <!-- project description -->
 
 
-
+            </div>
           </div>
 
         </div> <!--  END OF PORTFOLIO ROW-->
