--- a/divine.html
+++ b/divine.html
@@ -11,33 +11,33 @@
     <title>BYUNNNN</title>
     <!-- ADDING CUSTOM CSS STYLE -->
     <style>
-      p { font-family: Georgia, Times, Serif;}
-      h1 {font-family: "nyt-cheltenham",Georgia,Times, Serif; font-size: 24px}
-      h4 { padding-top: 32px; font-family: 'Open Sans', Georgia, Times, sans-serif; font-weight: 300;}
-      h5 {font-family: Georgia, Times, Serif;}
-      hr {margin-top: 10px;
-          margin-bottom:10px;}
-      .center-container { margin: auto; max-width: 1600px;}
-      .link {font-weight: bold; color: #000; line-height: 140%;}
-      a:link { color: #000}
-      a:hover { text-decoration: none; border-bottom: 2px solid #000;}
-      a:visited { color: #000;}
-      a:active { color: #000;}
-      #title:hover { border-bottom: 0px }
-      #nav {  font-family: Georgia, Times, Serif;
-              font-weight: normal;
-              color: #777;
-              border-bottom: 1px solid #777;}
-      #nav:hover {color: #000;
-                  border-bottom: 1px solid #000;}
-      img { padding-bottom: 10px;
-            /*-webkit-filter: grayscale(50%);*/
-            -webkit-filter: brightness(99%);
-          }
-      .btn {font-weight: bold;}
-      #more { text-decoration: none; font-style: italic;}
-      #more:hover {text-decoration: none; border-bottom: 1px solid #000;}
-      #left-bar {text-align: center;}
+    p { font-family: Georgia, Times, Serif;}
+    h1 {font-family: "nyt-cheltenham",Georgia,Times, Serif; font-size: 24px}
+    h4 { padding-top: 32px; font-family: 'Open Sans', Georgia, Times, sans-serif; font-weight: 300;}
+    h5 {font-family: Georgia, Times, Serif;}
+    hr {margin-top: 10px;
+        margin-bottom:10px;}
+    .center-container { margin: auto; max-width: 1600px;}
+    .link {font-weight: bold; color: #000; line-height: 140%;}
+    a:link { color: #000}
+    a:hover { text-decoration: none; border-bottom: 2px solid #000;}
+    a:visited { color: #000;}
+    a:active { color: #000;}
+    #title:hover { border-bottom: 0px }
+    #nav {  font-family: Georgia, Times, Serif;
+            font-weight: normal;
+            color: #777;
+            border-bottom: 1px solid #777;}
+    #nav:hover {color: #000;
+                border-bottom: 1px solid #000;}
+    img { padding-bottom: 10px;
+          /*-webkit-filter: grayscale(50%);*/
+          -webkit-filter: brightness(99%);
+        }
+    .btn {font-weight: bold;}
+    #more { text-decoration: none; font-style: italic;}
+    #more:hover {text-decoration: none; border-bottom: 1px solid #000;}
+    #left-bar {text-align: center;}
     </style>
   </head>
   <body>
@@ -85,7 +85,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-4">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>CRITIQUE <a href="index.html"><</a> </h4>
+              <h4>MEDIA DESIGN <a href="index.html"><</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -94,14 +94,14 @@
 
             <!-- project image -->
             <div class="image">
-              <a href=""><img src="image/data_00.jpg" class="img-responsive img-circle"></a>
+              <a href=""><img src="image/mapp_00.jpg" class="img-responsive img-circle"></a>
             </div>
             <!-- date description -->
             <p id="left-bar" style="font-family: 'Open Sans';">
-            <b>Data Analysis: Youth Crimes and Scholastic Aptitude Tests</b><br>
-            ITP, NYU<br>
-            New York, NY<br>
-            2014</p>
+            <b>Media Art on the Divine</b><br>
+            IDAS, HONGIK<br>
+            Seoul, KR<br>
+            2012</p>
 
             <div style="text-align: center;">
               <a href="" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
@@ -114,40 +114,39 @@
           <div class="col-sm-9 col-md-9 col-lg-9 col-xs-8">
             <!-- category title -->
             <div class="category title">
-              <h4>YOUTH CRIMES AND SCHOLASTIC APTITTUDE TESTS</h4>
+              <h4>MEDIA ART ON THE DIVINE</h4>
               <hr>
               <h3></h3>
             </div>
             <!-- ONE -->
             <!-- project description -->
-            <p>Data analysis in the relationship between youth crimes, stress, depression, college scholastic ability tests in Korea. Full analysis post. <span id="more"><a href="https://medium.com/i-data/relationships-between-youth-crimes-stress-depression-and-college-scholastic-ability-tests-4ef78ca1a250"><b>More @Medium</b></a></span> </p>
+            <p>Projection Mapping on a Religious Object; re-creating the death on cross and overlaying study sketches of the object.</p>
 
+            <p>A study of creating media art with projection mapping. Process: Ideation Phase - Sketching/ Research Contours - Sketching Styles - Mapping Research/ After Effects - Storyboarding - Presentation Setup </p>
+
+            <p><span id="more"><a href="http://mediabyun.tumblr.com/"><b>Documentation: http://mediabyun.tumblr.com/</b></a></span><p>
             <hr>
             <!-- project image -->
             <div class="image">
-              <div class="col-md-6">
-                <img src="image/data_02.png" class="img-responsive">
-                <img src="image/data_01.png" class="img-responsive">
-                <!-- <img src="image/data_03.png" class="img-responsive"> -->
-                <img src="image/data_04.png" class="img-responsive">
 
+              <div class="col-md-12">
+                <img src="image/mapp_01.jpg" class="img-responsive">
+
+                <img src="image/mapp_02.jpg" class="img-responsive">
+                <img src="image/mapp_03.jpg" class="img-responsive">
 
               </div>
               <div class="col-md-6">
+                <img src="image/sketch_01.jpg" class="img-responsive">
+                <img src="image/sketch_02.jpg" class="img-responsive">
+                <img src="image/sketch_04.jpg" class="img-responsive">
 
-                <p><b>Relationships between Youth Crimes, Stress, Depression, and College Scholastic Ability Tests.</b>
-                <br>
-                <em>Using open governmental data from Seoul, Korea.
-                </em>
-                <br><br>
-                <em>Excerpts:</em><br></p>
-
-                <blockquote style="font-size: 14px"><p>As we compare with America, Korea likes to play a bit differently, they have a high steady juvenile crime rate between April and November, where October is the month with the highest crime incident. It is peculiar isn't it? There should be nothing going on October. First term starts around March and we see a rise in crime, which according to the BJS is normal. Summer vacations are usually between mid-July and end-August, where we see high crime rates, which is also normal. Second term resumes around late-August, which there is nothing peculiar about it. And winter vacations is late-December. Normally for September, October, November there should be a steady decline in juvenile crimes, but not Korea. So I wonder why?<p></blockquote>
-
-                <blockquote style="font-size: 14px"><p>But what if I said this academic stress was the major problem in creating all the heavy issues in Korea? And that this embedded education system in Korea is absolutely a system of making psychological disorders?</p></blockquote>
               </div>
 
-
+              <div class="col-md-6">
+                <img src="image/sketch_03.jpg" class="img-responsive">
+                <img src="image/sketch_05.jpg" class="img-responsive">
+              </div>
             </div>
             <!-- project description -->
 
