--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ He will take great delight in you;
             <h5><em><a class="link" href="archi.html"> ARCHITECTURAL GRAFITTI</a></em></h5>
             <!-- project image -->
             <div class="image">
-              <a href=""><img src="image/graf_00.jpg" class="img-responsive img-circle"></a>
+              <a href="archi.html"><img src="image/graf_00.jpg" class="img-responsive img-circle"></a>
             </div>
             <!-- description -->
             <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design. <span id="more"><a href="archi.html">More>></a></span></p>
@@ -115,13 +115,13 @@ He will take great delight in you;
             <hr>
             <!-- TWO -->
             <!-- project title -->
-            <h5><em><a class="link" href="">DIGITAL ANALOG REPRESENTATIONS OF US</a></em></h5>
+            <h5><em><a class="link" href="digi.html">DIGITAL ANALOG REPRESENTATIONS OF US</a></em></h5>
             <!-- project image -->
             <div class="image">
-              <a href=""><img src="image/dian_03.png" class="img-responsive img-circle"></a>
+              <a href="digi.html"><img src="image/dian_03.png" class="img-responsive img-circle"></a>
             </div>
             <!-- description -->
-            <p>The juxtaposition of analog and digital expressions on a digital canvas. Usage of facedetection and pixel brightness to simulate paintings in the style of expressionism. <span id="more"><a href="">More>></a></span></p>
+            <p>The juxtaposition of analog and digital expressions on a digital canvas. Usage of facedetection and pixel brightness to simulate paintings in the style of expressionism. <span id="more"><a href="digi.html">More>></a></span></p>
             <!-- button -->
             <div class="more button"></div>
           </div>
@@ -130,17 +130,19 @@ He will take great delight in you;
           <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title">
-              <h4>TOOLS</h4>
+              <h4>MEDIA DESIGN</h4>
               <hr>
               <h3></h3>
             </div>
             <!-- ONE -->
             <!-- project title -->
-            <h5><em><a class="link" href="">NYT BOT PHILOSOPHY</a></em></h5>
+            <h5><em><a class="link" href="typo.html">TYPOGRAPHY</a></em></h5>
             <!-- project image -->
-            <div class="image"></div>
+            <div class="image">
+              <a href="typo.html"><img src="image/typo_00.jpg" class="img-responsive img-circle"></a>
+            </div>
             <!-- project description -->
-            <p>lorum ipsum then hadted chased for 15 years how do yout eel horiznontal groups colums using the roll class facera; so now I'm here this is it but not a row. <span id="more"><a href="">More>></a></span></p>
+            <p>Personal typography projects over the years for different media platforms. Branding, Books, Posters, Slides. <br><span id="more"><a href="typo.html">More>></a></span></p>
             <div class="more button">
 
             </div>
@@ -149,11 +151,13 @@ He will take great delight in you;
             <hr>
             <!-- TWO -->
             <!-- project title -->
-            <h5><em><a class="link" href="">SHAKESPEARE DATA VIZ</a></em></h5>
+            <h5><em><a class="link" href="divine.html">MEDIA ART ON THE DIVINE</a></em></h5>
             <!-- project image -->
-            <div class="image"></div>
+            <div class="image">
+              <a href="divine.html"><img src="image/mapp_00.jpg" class="img-responsive img-circle"></a>
+            </div>
             <!-- project description -->
-            <p>lorum ipsum then hadted chased for 15 years how do yout eel horiznontal groups colums using the roll class facera; so now I'm here this is it but not a row. <span id="more"><a href="">More>></a></span></p>
+            <p>Projection Mapping on a Religious Object; re-creating the death on cross and overlaying study sketches of the object. <span id="more"><a href="divine.html">More>></a></span></p>
             <div class="more button">
 
             </div>
@@ -172,7 +176,7 @@ He will take great delight in you;
             <h5><em><a class="link" href="data_analysis.html">YOUTH CRIMES AND SCHOLASTIC APTITUDE TEST</a></em></h5>
             <!-- project image -->
             <div class="image">
-              <a href=""><img src="image/data_02.png" class="img-responsive"></a>
+              <a href="data_analysis.html"><img src="image/data_02.png" class="img-responsive"></a>
               <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
             </div>
             <!-- description -->
@@ -186,14 +190,14 @@ He will take great delight in you;
             <hr>
             <!-- TWO -->
             <!-- project title -->
-            <h5><em><a class="link" href="">CARNISSEUR™ AFTERMATH</a></em></h5>
+            <h5><em><a class="link" href="carni.html">CARNISSEUR™ AFTERMATH</a></em></h5>
             <!-- project image -->
             <div class="image">
-              <a href=""><img src="image/carni_01.png" class="img-responsive"></a>
+              <a href="carni.html"><img src="image/carni_0A.jpg" class="img-responsive img-circle"></a>
               <!-- <a href=""><img src="image/carni_01.png" class="img-responsive img-circle"></a> -->
             </div>
             <!-- description -->
-            <p>This is a writing on the aftermath of Carnisseur™, a fictional food corporation placed not so far into the future, its emergence and its lessons. The whole project is based on the premise that food future will be inevitably exploited by capitalistic tools. A criticism on corporations that commercializes basic rights to live as a human being. <span id="more"><a href="">More>></a></span></p>
+            <p>This is a writing on the aftermath of Carnisseur™, a fictional food corporation placed not so far into the future, its emergence and its lessons. The whole project is based on the premise that food future will be inevitably exploited by capitalistic tools. A criticism on corporations that commercializes basic rights to live as a human being. <span id="more"><a href="carni.html">More>></a></span></p>
             <!-- button -->
             <div class="more button">
             </div>
