--- a/typo.html
+++ b/typo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
     <script src=""></script>
     <title>BYUNNNN</title>
     <!-- ADDING CUSTOM CSS STYLE -->
@@ -37,6 +37,7 @@
       .btn {font-weight: bold;}
       #more { text-decoration: none; font-style: italic;}
       #more:hover {text-decoration: none; border-bottom: 1px solid #000;}
+      #left-bar {text-align: center;}
     </style>
   </head>
   <body>
@@ -84,34 +85,29 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-4">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>ABOUT</h4>
+              <h4>MEDIA DESIGN <a href="index.html"><</a> </h4>
               <hr>
               <h3></h3>
             </div>
             <!-- ONE -->
             <!-- project title -->
-            <h5><em><a class="link" href=""> KARAM BYUN</a></em></h5>
+
             <!-- project image -->
             <div class="image">
               <a href=""><img src="image/typo_00.jpg" class="img-responsive img-circle"></a>
             </div>
-            <!-- description -->
-            <p><em>
-              <a href="mailto:byunkaram@gmail.com">Email: byunkaram@gmail.com</a>
-              <a href="http://twitter.com/crzikrn"><br>Twitter: @crzikrn<a>
-              <a href="http://github.com/crzikrn"><br>Github: @crzikrn</a>
-              <a href="https://medium.com/@crzikrn"><br>Medium: @crzikrn</a>
-              <a href="http://vimeo.com/crzikrn"><br>Vimeo: @crzikrn</a>
-              <a href="http://www.linkedin.com/in/karambyun"><br>LinkedIn: @karambyun</a>
-            </em></p>
-            <!-- button -->
-            <div class="more button">
+            <!-- date description -->
+            <p id="left-bar" style="font-family: 'Open Sans';">
+            <b>Typography</b><br>
+            Seoul, KR<br>
+            Ulan Bator, MG<br>
+            New York, NY<br>
+            2010-2015</p>
 
+            <div style="text-align: center;">
+              <a href="" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
-
-            <br>
-            <hr>
-
 
           </div>
 
@@ -119,28 +115,44 @@
           <div class="col-sm-9 col-md-9 col-lg-9 col-xs-8">
             <!-- category title -->
             <div class="category title">
-              <h4>KARAM BYUN</h4>
+              <h4>TYPOGRAPHY</h4>
               <hr>
               <h3></h3>
             </div>
             <!-- ONE -->
-            <!-- project title -->
-            <h5><em><a class="link" href="">ABOUT</a></em></h5>
-            <!-- project image -->
-            <div class="image"></div>
             <!-- project description -->
-            <p>I recently graduated as a master's candidate at ITP, NYU. My passions are closely tied with computational media effects on society, education and religion.
-            <br><br>
-            I love programming languages and vector designs, and especially love to teach basic concepts of these fields to people. I have recently taught at Mongolia at Huree University in the Multimedia department. And am looking forward for more teaching opportunities.</p>
-            <div class="more button">
+            <p>Personal typography projects over the years for different media platforms. Branding, Books, Posters, Slides. Different solutions for capturing audience's attention and guiding for good readability.</p>
+
+            <hr>
+            <!-- project image -->
+            <div class="image">
+              <div class="col-md-6">
+                <h4>Name Branding/ Logo </h4>
+                <hr>
+                <a href="image/typo_01.jpg"><img src="image/typo_01.jpg" class="img-responsive"></a>
+
+                <h4>Typography Poster</h4>
+                <hr>
+                <a href="image/typo_02.jpg"><img src="image/typo_02.jpg" class="img-responsive"></a>
+                <!-- <img src="image/data_03.png" class="img-responsive"> -->
+              </div>
+              <div class="col-md-6">
+                <h4>Article Page Design</h4>
+                <hr>
+                <a href="image/typo_03.jpg"><img src="image/typo_03.jpg" class="img-responsive">
+                </a>
+                <h4>Slides for teaching at Mongolia</h4>
+                <hr><a href="image/typo_04.jpg">
+                <img src="image/typo_04.jpg" class="img-responsive"></a>
+                <p></p>
+              </div>
+
 
             </div>
-            <!-- break -->
-            <br>
-            <hr>
+            <!-- project description -->
 
 
-
+            </div>
           </div>
 
         </div> <!--  END OF PORTFOLIO ROW-->
