--- a/archi.html
+++ b/archi.html
@@ -98,7 +98,7 @@
             </div>
             <!-- date description -->
             <p id="left-bar" style="font-family: 'Open Sans';">
-            <b>Architectural Grafitti</b><br>
+            <b>Architectural Graffiti</b><br>
             ITP, NYU<br>
             New York, NY<br>
             2014</p>
@@ -114,7 +114,7 @@
           <div class="col-sm-9 col-md-9 col-lg-9 col-xs-8">
             <!-- category title -->
             <div class="category title">
-              <h4>ARCHITECTURAL GRAFITTI</h4>
+              <h4>ARCHITECTURAL GRAFFITI</h4>
               <hr>
               <h3></h3>
             </div>
@@ -122,7 +122,7 @@
             <!-- project description -->
             <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design.</p>
 
-            <p>Used processing to mine xml graffitii data list to render in real-time and camera 3d movements to keep handlers in check. The rendering of 3D.</p>
+            <p>Used processing to mine xml graffiti data list to render in real-time and camera 3d movements to keep handlers in check. The rendering of 3D.</p>
             <hr>
             <!-- project image -->
             <div class="image">
@@ -134,8 +134,7 @@
               </div>
               <div class="col-md-6">
                 <img src="image/graf_01.jpg" class="img-responsive">
-                <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design.
-                Substantially,Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design.Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design. </p>
+            
               </div>
 
 
