--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ He will take great delight in you;
             </div>
             <!-- ONE -->
             <!-- project title -->
-            <h5><em><a class="link" href="archi.html"> ARCHITECTURAL GRAFITTI</a></em></h5>
+            <h5><em><a class="link" href="archi.html"> ARCHITECTURAL GRAFFITI</a></em></h5>
             <!-- project image -->
             <div class="image">
               <a href="archi.html"><img src="image/graf_00.jpg" class="img-responsive img-circle"></a>
