--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
               <li><a class="link" id="nav" href="about.html">About</a></li>
               <li><a class="link" id="nav" href="index.html">Works</a></li>
               <li><a class="link" id="nav"  href="http://byunnnn.com/blog">Blog</a></li>
-              <li><a class="link" id="nav" href="">Contact</a></li>
+              <!-- <li><a class="link" id="nav" href="">Contact</a></li> -->
             </ul>
           </div>
           <!-- <hr width="97%"> -->
