--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ He will take great delight in you;
               <li><a class="link" id="nav" href="about.html">About</a></li>
               <li><a class="link" id="nav" href="index.html">Works</a></li>
               <li><a class="link" id="nav"  href="http://byunnnn.com/blog">Blog</a></li>
-              <li><a class="link" id="nav" href="">Contact</a></li>
+              <!-- <li><a class="link" id="nav" href="">Contact</a></li> -->
             </ul>
           </div>
           <!-- <hr width="97%"> -->
