--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ He will take great delight in you;
             <h5><em><a class="link" href="data_analysis.html">YOUTH CRIMES AND SCHOLASTIC APTITUDE TEST</a></em></h5>
             <!-- project image -->
             <div class="image">
-              <a href="data_analysis.html"><img src="image/data_02.png" class="img-responsive"></a>
+              <a href="data_analysis.html"><img src="image/data_0A.png" class="img-responsive img-circle"></a>
               <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
             </div>
             <!-- description -->
